Debugging ex2.cpp

--- a/compilation/CMakeLists.txt
+++ b/compilation/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.6)
 project (debugging)
 include_directories(/usr/include/eigen3)
-add_executable(ex1 ex1.cpp)
-add_executable(ex2 ex2.cpp helper1.cpp)
+#add_executable(ex1 ex1.cpp)
+#add_executable(ex2 ex2.cpp helper1.cpp helper2.cpp)
 add_executable(ex3 ex3.cpp)
 
